--- a/package.json
+++ b/package.json
@@ -4,8 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsc && node dist/index.js",
+    "start": "ts-node-dev src/index.ts",
+    "up": "cd tools && docker-compose up -d",
+    "down": "cd tools && docker-compose down"
   },
   "author": "kalyan chowdary",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.410.0",
+    "@aws-sdk/client-s3": "^3.410.0",
+    "@aws-sdk/lib-dynamodb": "^3.410.0",
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.17",
+    "@types/uuid": "^9.0.3",
+    "axios": "^1.5.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "firebase-admin": "^11.10.1",
+    "fs": "^0.0.1-security",
+    "redis": "^4.6.8",
+    "string-hash": "^1.1.3",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
+  }
 }
