--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "tsc && node dist/index.js",
     "start": "ts-node-dev src/index.ts",
+    "init":"python3 python-src/my_module/insta.py",
     "up": "cd tools && docker-compose up -d",
     "down": "cd tools && docker-compose down"
   },
@@ -17,12 +18,15 @@
     "@aws-sdk/lib-dynamodb": "^3.410.0",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/pbkdf2": "^3.1.0",
     "@types/uuid": "^9.0.3",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase-admin": "^11.10.1",
     "fs": "^0.0.1-security",
+    "mongoose": "^7.5.1",
+    "pbkdf2": "^3.1.2",
     "redis": "^4.6.8",
     "string-hash": "^1.1.3",
     "ts-node-dev": "^2.0.0",
