--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsc && node dist/index.js",
     "start": "ts-node-dev src/index.ts",
-    "init":"python3 python-src/my_module/insta.py",
+    "init": "python3 python-src/my_module/insta.py",
     "up": "cd tools && docker-compose up -d",
     "down": "cd tools && docker-compose down"
   },
@@ -21,11 +21,14 @@
     "@types/pbkdf2": "^3.1.0",
     "@types/uuid": "^9.0.3",
     "axios": "^1.5.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase-admin": "^11.10.1",
     "fs": "^0.0.1-security",
     "mongoose": "^7.5.1",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
     "pbkdf2": "^3.1.2",
     "redis": "^4.6.8",
     "string-hash": "^1.1.3",
