--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "fs": "^0.0.1-security",
     "mongoose": "^7.5.1",
     "multer": "^1.4.5-lts.1",
-    "node-cron": "^3.0.2",
+    "node-cron": "^3.0.3",
     "pbkdf2": "^3.1.2",
     "redis": "^4.6.8",
     "string-hash": "^1.1.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/node-cron": "^3.0.11"
   }
 }
